Fix background on mobile failed

--- a/styles/index.css
+++ b/styles/index.css
@@ -55,19 +55,3 @@ footer div div img {
     background-color: white;
     border-radius: 10px;
 }
-
-@media only screen and (max-width: 600px) {
-    nav {
-        margin-top: 0;
-    }
-    nav a {
-        margin: 5px;
-        font-size: large;
-    }
-    footer p {
-        font-size: medium;
-    }
-    footer div div img {
-        margin: 5px;
-    }
-}
